Add SVEC-12.02 and CET-15.02.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Double Integrals over Rectangles
-      ###### Average Value
+      ##### Double Integrals over General Regions
+      ###### Properties of Double Integrals
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Double Integrals over Rectangles
-      ###### Average Value
+      ##### Double Integrals over General Regions
+      ###### Properties of Double Integrals
       State the . List its hypotheses.
     Back: |
       X
