--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Double Integrals over General Regions
-      ###### Properties of Double Integrals
+      ##### Applications of Double Integrals
+      ###### Moments and Centers of Mass
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Double Integrals over General Regions
-      ###### Properties of Double Integrals
+      ##### Applications of Double Integrals
+      ###### Moments and Centers of Mass
       State the . List its hypotheses.
     Back: |
       X
