Add SVEC-12.05 and CET-15.06.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Applications of Double Integrals
-      ###### Moments and Centers of Mass
+      ##### Triple Integrals
+      ###### Applications of Triple Integrals
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Applications of Double Integrals
-      ###### Moments and Centers of Mass
+      ##### Triple Integrals
+      ###### Applications of Triple Integrals
       State the . List its hypotheses.
     Back: |
       X
