Add SVEC-12.06-7, CET-15.07-8.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Triple Integrals
-      ###### Applications of Triple Integrals
+      ##### Triple Integrals in Spherical Coordinates
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +42,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Triple Integrals
-      ###### Applications of Triple Integrals
+      ##### Triple Integrals in Spherical Coordinates
       State the . List its hypotheses.
     Back: |
       X
