Add SVEC-12.08 and CET-15.09.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,7 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Triple Integrals in Spherical Coordinates
+      ##### Change of Variables in Multiple Integrals
+      ###### Triple Integrals
       Define . List its hypotheses.
     Back: |
       X
@@ -42,7 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Multiple Integrals
-      ##### Triple Integrals in Spherical Coordinates
+      ##### Change of Variables in Multiple Integrals
+      ###### Triple Integrals
       State the . List its hypotheses.
     Back: |
       X
