Add SVEC-13.03 and CET-16.03.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Line Integrals
-      ###### Line Integrals of Vector Fields
+      ##### The Fundamental Theorem for Line Integrals
+      ###### Independence of Path
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Line Integrals
-      ###### Line Integrals of Vector Fields
+      ##### The Fundamental Theorem for Line Integrals
+      ###### Independence of Path
       State the . List its hypotheses.
     Back: |
       X
