Add SVEC-13.06 and CET-16.06.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Curl and Divergence
-      ###### Vector Forms of Green's Theorem
+      ##### Parametric Surfaces and Their Areas
+      ###### Surface Area of the Graph of a Function
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Curl and Divergence
-      ###### Vector Forms of Green's Theorem
+      ##### Parametric Surfaces and Their Areas
+      ###### Surface Area of the Graph of a Function
       State the . List its hypotheses.
     Back: |
       X
