Add SVEC-13.07 and CET-16.07.

--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Parametric Surfaces and Their Areas
-      ###### Surface Area of the Graph of a Function
+      ##### Surface Integrals
+      ###### Surface Integrals of Vector Fields
       Define . List its hypotheses.
     Back: |
       X
@@ -43,8 +43,8 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Parametric Surfaces and Their Areas
-      ###### Surface Area of the Graph of a Function
+      ##### Surface Integrals
+      ###### Surface Integrals of Vector Fields
       State the . List its hypotheses.
     Back: |
       X
