Change "Stoke's" to "Stokes'" in SVEC-13.08 and CET-16.08.

--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/16.08.Examples.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/16.08.Examples.yml
@@ -17,7 +17,7 @@ notes:
     Front: |
       CET-16.08-1 Example:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -29,7 +29,7 @@ notes:
     Front: |
       CET-16.08-2 Example:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
