--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/16.08.Exercises.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/16.08.Exercises.yml
@@ -17,7 +17,7 @@ notes:
     Front: |
       CET-16.08-01 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -29,7 +29,7 @@ notes:
     Front: |
       CET-16.08-02 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -41,7 +41,7 @@ notes:
     Front: |
       CET-16.08-03 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -53,7 +53,7 @@ notes:
     Front: |
       CET-16.08-04 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -65,7 +65,7 @@ notes:
     Front: |
       CET-16.08-05 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -77,7 +77,7 @@ notes:
     Front: |
       CET-16.08-06 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -89,7 +89,7 @@ notes:
     Front: |
       CET-16.08-07 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -101,7 +101,7 @@ notes:
     Front: |
       CET-16.08-08 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -113,7 +113,7 @@ notes:
     Front: |
       CET-16.08-09 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -125,7 +125,7 @@ notes:
     Front: |
       CET-16.08-10 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -137,7 +137,7 @@ notes:
     Front: |
       CET-16.08-11 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -149,7 +149,7 @@ notes:
     Front: |
       CET-16.08-12 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -161,7 +161,7 @@ notes:
     Front: |
       CET-16.08-13 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -173,7 +173,7 @@ notes:
     Front: |
       CET-16.08-14 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -185,7 +185,7 @@ notes:
     Front: |
       CET-16.08-15 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -197,7 +197,7 @@ notes:
     Front: |
       CET-16.08-16 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -209,7 +209,7 @@ notes:
     Front: |
       CET-16.08-17 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -221,7 +221,7 @@ notes:
     Front: |
       CET-16.08-18 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -233,7 +233,7 @@ notes:
     Front: |
       CET-16.08-19 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
@@ -245,7 +245,7 @@ notes:
     Front: |
       CET-16.08-20 Exercise:
       #### Vector Calculus
-      ##### Stoke's Theorem
+      ##### Stokes' Theorem
       Temporary: work out of CET textbook.
     Back: |
       To do.
