--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -19,8 +19,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Surface Integrals
-      ###### Stoke's Theorem
+      ##### The Divergence Theorem
       Define . List its hypotheses.
     Back: |
       X
@@ -46,8 +45,7 @@
     Front: |
       SVEC-XX.XX-XX Synthesis:
       #### Vector Calculus
-      ##### Surface Integrals
-      ###### Stoke's Theorem
+      ##### The Divergence Theorem
       State the . List its hypotheses.
     Back: |
       X
